--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-
     <div class="container">
         <div class="card">
             <form>
@@ -19,11 +18,22 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="content">
         <div class="display">
             <p id="name" class="name" style="margin-top: 0; font-weight: bold;"></p>
             <p id="username"></p>
             <p id="email"></p>
+            <div class="btn-view">
+                <p class="btn1" id="view-posts">View Posts</p>
+                <p class="btn2" id="view-albums">View Albums</p>
+                <p class="btn3" id="view-todos">View Todos</p>
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <div class="display">
+            <p style="font-size:20px"><b>Posts</b></p>
+            <p id="posts"></p>
         </div>
     </div>
     
