--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="header">
+        <div class="list">
+            <ul>
+                <li>.mockup</li>
+            </ul>
+        </div>
+    </div>
+
     <div class="container">
         <div class="card">
             <form>
@@ -23,6 +32,7 @@
             <p id="name" class="name" style="margin-top: 0; font-weight: bold;"></p>
             <p id="username"></p>
             <p id="email"></p>
+            <p id="userId" style="display: none;"></p>
             <div class="btn-view">
                 <p class="btn1" id="view-posts">View Posts</p>
                 <p class="btn2" id="view-albums">View Albums</p>
@@ -31,9 +41,23 @@
         </div>
     </div>
     <div class="content">
-        <div class="display">
+        <div class="posts">
             <p style="font-size:20px"><b>Posts</b></p>
-            <p id="posts"></p>
+            <div id="posts"></div>
+        </div>
+    </div>
+
+    <div class="content">
+        <div class="albums">
+            <p style="font-size:20px"><b>Albums</b></p>
+            <div id="albums"></div>
+        </div>
+    </div>
+
+    <div class="content">
+        <div class="todos">
+            <p style="font-size:20px"><b>Todos</b></p>
+            <div id="todos"></div>
         </div>
     </div>
     
