open and close user window/items

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
     <div class="content">
         <div class="display">
-            <p id="name" class="name" style="margin-top: 0; font-weight: bold;"></p>
+            <div class="displayHeader">
+                <p id="name" class="name" style="margin: 0; font-weight: bold;"></p>
+                <p id="close" class="close" style="margin-top: 0;">X</p>
+            </div>
             <p id="username"></p>
             <p id="email"></p>
             <p id="userId" style="display: none;"></p>
