--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="#">
-    <title>Document</title>
+    <title>.mockup</title>
 </head>
 <body>
 
     <div class="header">
-        <div class="list">
             <ul>
-                <li>.mockup</li>
+                <a href="index.html"><li>.mockup</li></a>
             </ul>
-        </div>
+            <ul>
+                <a href="about.html"><li class="menu-item">About</li></a>
+            </ul>
     </div>
 
     <div class="container">
